fix spacing in footer

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -133,8 +133,7 @@ a {
   background: $grey-color;
   color: $primary-color;
   font-size: 1rem;
-  height: 31vh;
-  padding: 2rem 0 2.8rem 0;
+  padding: 2rem 0 2rem 0;
 
   .footer-inner {
     display: flex;
@@ -160,7 +159,7 @@ a {
       
       a {
         margin-top: -0.5rem;
-        padding: 0 1rem 0 1rem;
+        padding: 0.2rem 1rem 0 1rem;
         font-size: 3rem;
         color: $primary-color;
       }
@@ -172,47 +171,3 @@ a {
     }
   }
 }
-
-// footer {
-//   background: $grey-color;
-//   color: $seventh-color;
-//   font-size: 1rem;
-//   padding: 2rem 0 1.5rem 0;
-
-//   .footer-inner {
-//     max-width: 1100px;
-//     margin: 0 auto;
-//     padding: 0 1.25rem;
-//     display: flex;
-//     flex-direction: column;
-//     align-items: center;
-//     justify-content: space-between;
-//     font-weight: 300;
-
-//     p {
-//         padding: 0.2rem 0;
-//         font-size: 0.8rem;
-//     }
-
-//     h2 {
-//         font-size: 1.2rem;
-//         padding: 0.4rem 0;
-//         font-weight: 300;
-//     }
-
-//     .social-links {
-//         display: flex;
-//         flex-direction: row;
-
-//         a {
-//             margin: 0 0.5rem;
-//             font-size: 2.6rem;
-//             padding: 0 0.3rem;
-//         }
-
-//         a:hover {
-//             color: $fourth-color;
-//         }
-//     }
-//   }
-// }
